feat: implement Route 53 Private Hosted Zone for DNS-based inventory
- Add Private Hosted Zone (ans.local) to control-node.yaml
- Add DNS records to all managed-nodes templates
- Update all inventory files to use DNS names
- Hostnames: al2023-1/2, ubuntu-1, awx, zabbix, target-1/2

--- a/middleware/ansible/01-installation/cfn/control-node.yaml
+++ b/middleware/ansible/01-installation/cfn/control-node.yaml
@@ -204,6 +204,28 @@ Resources:
 
           echo "Control Node ready" > /home/ansible/setup-complete.txt
 
+  # Private Hosted Zone for DNS-based inventory
+  PrivateHostedZone:
+    Type: AWS::Route53::HostedZone
+    Properties:
+      Name: ans.local
+      VPCs:
+        - VPCId: !Ref VPC
+          VPCRegion: !Ref AWS::Region
+      HostedZoneConfig:
+        Comment: Ansible Course Private DNS
+
+  # Control Node DNS Record
+  ControlNodeDns:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref PrivateHostedZone
+      Name: control.ans.local
+      Type: A
+      TTL: 60
+      ResourceRecords:
+        - !GetAtt ControlNode.PrivateIp
+
 Outputs:
   ControlNodeId:
     Description: Control Node Instance ID
@@ -228,6 +250,12 @@ Outputs:
     Value: !Ref ControlNodeSecurityGroup
     Export:
       Name: ansible-course-sg-id
+
+  HostedZoneId:
+    Description: Private Hosted Zone ID
+    Value: !Ref PrivateHostedZone
+    Export:
+      Name: ansible-course-hosted-zone-id
 
   SSMConnectCommand:
     Description: Connect via SSM
