--- a/middleware/ansible/01-installation/inventory/hosts.ini
+++ b/middleware/ansible/01-installation/inventory/hosts.ini
@@ -1,11 +1,11 @@
 # Ansible Course - Lesson 01 Inventory
-# 填入 Managed Nodes 的 IP（从 CloudFormation Outputs 获取）
+# DNS names from Route 53 Private Hosted Zone (ans.local)
 
 [webservers]
-node1 ansible_host=<NODE1_IP>
+al2023-1.ans.local
 
 [dbservers]
-node2 ansible_host=<NODE2_IP>
+al2023-2.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
