--- a/middleware/ansible/02-inventory/inventory/hosts.ini
+++ b/middleware/ansible/02-inventory/inventory/hosts.ini
@@ -1,18 +1,15 @@
 # =============================================================================
 # Lesson 02 - Working Inventory
 # =============================================================================
-# This file will be auto-generated with your node IPs after running DEPLOY.md
-# You can also create it manually using the examples in this folder:
-#   - 01-basic-ini.ini
-#   - 02-with-groups.ini
-#   - 03-yaml-format.yaml
+# DNS names from Route 53 Private Hosted Zone (ans.local)
+# No need to replace IP addresses - DNS handles resolution automatically
 # =============================================================================
 
 [webservers]
-node1 ansible_host=REPLACE_WITH_NODE1_IP
+al2023-1.ans.local
 
 [dbservers]
-node2 ansible_host=REPLACE_WITH_NODE2_IP
+al2023-2.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
