--- a/middleware/ansible/05-variables-logic/inventory/hosts.ini
+++ b/middleware/ansible/05-variables-logic/inventory/hosts.ini
@@ -1,27 +1,27 @@
 # =============================================================================
 # Lesson 05 - Multi-OS Inventory
 # =============================================================================
-# This file will be auto-generated with your node IPs after running DEPLOY.md
+# DNS names from Route 53 Private Hosted Zone (ans.local)
 # This lesson uses 3 nodes: 2 Amazon Linux + 1 Ubuntu
 # =============================================================================
 
 # Functional groups
 [webservers]
-node1 ansible_host=REPLACE_WITH_NODE1_IP
+al2023-1.ans.local
 
 [dbservers]
-node2 ansible_host=REPLACE_WITH_NODE2_IP
+al2023-2.ans.local
 
 [appservers]
-node3 ansible_host=REPLACE_WITH_NODE3_IP
+ubuntu-1.ans.local
 
 # OS-based groups
 [amazon_linux]
-node1
-node2
+al2023-1.ans.local
+al2023-2.ans.local
 
 [ubuntu]
-node3
+ubuntu-1.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
