--- a/middleware/ansible/09-vault-secrets/inventory/hosts.ini
+++ b/middleware/ansible/09-vault-secrets/inventory/hosts.ini
@@ -1,14 +1,14 @@
 # =============================================================================
 # Lesson 09 - Working Inventory
 # =============================================================================
-# This file will be auto-generated with your node IPs after running DEPLOY.md
+# DNS names from Route 53 Private Hosted Zone (ans.local)
 # =============================================================================
 
 [webservers]
-node1 ansible_host=REPLACE_WITH_NODE1_IP
+al2023-1.ans.local
 
 [dbservers]
-node2 ansible_host=REPLACE_WITH_NODE2_IP
+al2023-2.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
