--- a/middleware/ansible/10-awx-tower/inventory/hosts.ini
+++ b/middleware/ansible/10-awx-tower/inventory/hosts.ini
@@ -1,14 +1,14 @@
 # =============================================================================
 # Lesson 10 - AWX Inventory
 # =============================================================================
-# This file will be auto-generated with your node IPs after running DEPLOY.md
+# DNS names from Route 53 Private Hosted Zone (ans.local)
 # =============================================================================
 
 [awx]
-awx-server ansible_host=REPLACE_WITH_AWX_IP
+awx.ans.local
 
 [targets]
-awx-target ansible_host=REPLACE_WITH_TARGET_IP
+awx-target.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
