--- a/middleware/ansible/01-installation/cfn/managed-nodes.yaml
+++ b/middleware/ansible/01-installation/cfn/managed-nodes.yaml
@@ -63,7 +63,7 @@ Resources:
       IamInstanceProfile: !Ref ManagedNodeInstanceProfile
       Tags:
         - Key: Name
-          Value: node1-webserver
+          Value: al2023-1
         - Key: Role
           Value: webserver
       UserData:
@@ -71,8 +71,7 @@ Resources:
           #!/bin/bash
           set -e
 
-          hostnamectl set-hostname node1-webserver
-          echo "node1-webserver" > /etc/hostname
+          hostnamectl set-hostname al2023-1
 
           useradd -m ansible
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
@@ -100,7 +99,7 @@ Resources:
       IamInstanceProfile: !Ref ManagedNodeInstanceProfile
       Tags:
         - Key: Name
-          Value: node2-dbserver
+          Value: al2023-2
         - Key: Role
           Value: dbserver
       UserData:
@@ -108,8 +107,7 @@ Resources:
           #!/bin/bash
           set -e
 
-          hostnamectl set-hostname node2-dbserver
-          echo "node2-dbserver" > /etc/hostname
+          hostnamectl set-hostname al2023-2
 
           useradd -m ansible
           echo 'ansible ALL=(ALL) NOPASSWD:ALL' > /etc/sudoers.d/ansible
@@ -125,6 +123,26 @@ Resources:
 
           echo "Node ready - SSH key NOT configured (manual setup required)" > /home/ansible/setup-status.txt
 
+  Node1Dns:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !ImportValue ansible-course-hosted-zone-id
+      Name: al2023-1.ans.local
+      Type: A
+      TTL: 60
+      ResourceRecords:
+        - !GetAtt ManagedNode1.PrivateIp
+
+  Node2Dns:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !ImportValue ansible-course-hosted-zone-id
+      Name: al2023-2.ans.local
+      Type: A
+      TTL: 60
+      ResourceRecords:
+        - !GetAtt ManagedNode2.PrivateIp
+
 Outputs:
   Node1InstanceId:
     Description: Node 1 Instance ID (for SSM)
@@ -134,10 +152,10 @@ Outputs:
     Description: Node 2 Instance ID (for SSM)
     Value: !Ref ManagedNode2
 
-  Node1PrivateIp:
-    Description: Node 1 Private IP
-    Value: !GetAtt ManagedNode1.PrivateIp
+  Node1Dns:
+    Description: Node 1 DNS Name
+    Value: al2023-1.ans.local
 
-  Node2PrivateIp:
-    Description: Node 2 Private IP
-    Value: !GetAtt ManagedNode2.PrivateIp
+  Node2Dns:
+    Description: Node 2 DNS Name
+    Value: al2023-2.ans.local
