--- a/middleware/ansible/11-zabbix-eda/inventory/hosts.ini
+++ b/middleware/ansible/11-zabbix-eda/inventory/hosts.ini
@@ -1,17 +1,17 @@
 # =============================================================================
 # Lesson 11 - Zabbix + EDA Inventory
 # =============================================================================
-# This file will be auto-generated with your node IPs after running DEPLOY.md
+# DNS names from Route 53 Private Hosted Zone (ans.local)
 # =============================================================================
 
 [zabbix_server]
-zabbix-server ansible_host=REPLACE_WITH_ZABBIX_IP
+zabbix.ans.local
 
 [webservers]
-target1-web ansible_host=REPLACE_WITH_TARGET1_IP
+target-1.ans.local
 
 [appservers]
-target2-app ansible_host=REPLACE_WITH_TARGET2_IP
+target-2.ans.local
 
 [monitored:children]
 webservers
@@ -20,4 +20,4 @@ appservers
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 # Used by Zabbix agent configuration
-zabbix_server_ip=REPLACE_WITH_ZABBIX_IP
+zabbix_server_host=zabbix.ans.local
