refactor: update Ansible course with DNS-based inventory
- Update all inventory files to use DNS names (al2023-1.ans.local)
- Add progressive inventory examples (01-basic through 07-control-local)
- Add module exercise scripts for hands-on practice
- Fix README UI text for Chinese/Japanese AWS Console
- Update component order in 00-concepts for logical learning flow
- Add CloudFormation comparison to Ansible vs Terraform section

--- a/middleware/ansible/02-inventory/inventory/04-group-vars/host_vars/al2023-1.ans.local.yaml
+++ b/middleware/ansible/02-inventory/inventory/04-group-vars/host_vars/al2023-1.ans.local.yaml
@@ -1,8 +1,8 @@
 # =============================================================================
-# host_vars/web1.yaml - Variables specific to web1 host
+# host_vars/al2023-1.ans.local.yaml - Variables specific to al2023-1 host
 # =============================================================================
 #
-# These variables apply ONLY to the host named "web1".
+# These variables apply ONLY to the host named "al2023-1.ans.local".
 # HIGHEST precedence (overrides all.yaml and group_vars).
 #
 # Use case: This server has special configuration
@@ -12,7 +12,7 @@
 
 ---
 # Override http_port from group_vars/webservers.yaml
-# web1 uses non-standard port (load balancer backend)
+# al2023-1 uses non-standard port (load balancer backend)
 http_port: 8080
 
 # This host is the primary/master
