--- a/middleware/ansible/02-inventory/inventory/04-group-vars/hosts.ini
+++ b/middleware/ansible/02-inventory/inventory/04-group-vars/hosts.ini
@@ -12,13 +12,7 @@
 #   │   ├── webservers.yaml <- Variables for webservers group
 #   │   └── dbservers.yaml  <- Variables for dbservers group
 #   └── host_vars/
-#       └── web1.yaml       <- Variables specific to web1
-#
-# Why separate files?
-#   - Cleaner inventory file
-#   - Variables organized by scope
-#   - Easier to manage in git (separate changes)
-#   - Vault encryption per file
+#       └── al2023-1.ans.local.yaml  <- Variables specific to al2023-1
 #
 # Run with:
 #   cd 04-group-vars
@@ -27,8 +21,10 @@
 # =============================================================================
 
 [webservers]
-web1 ansible_host=10.0.1.10
-web2 ansible_host=10.0.1.11
+al2023-1.ans.local
 
 [dbservers]
-db1 ansible_host=10.0.1.20
+al2023-2.ans.local
+
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
