--- a/middleware/ansible/examples/01-inventory/solution/01-basic-ini.ini
+++ b/middleware/ansible/examples/01-inventory/solution/01-basic-ini.ini
@@ -9,10 +9,9 @@
 #
 # =============================================================================
 
-# Ungrouped hosts (automatically in "all" and "ungrouped" groups)
-node1
-node2
+# Using DNS names from Route 53 Private Hosted Zone
+al2023-1.ans.local
+al2023-2.ans.local
 
-# You can also use IP addresses
-# 192.168.1.10
-# 192.168.1.11
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
