--- a/middleware/ansible/examples/01-inventory/solution/02-with-groups.ini
+++ b/middleware/ansible/examples/01-inventory/solution/02-with-groups.ini
@@ -6,38 +6,21 @@
 #
 # What's new:
 #   - [groupname] defines a group
-#   - ansible_host sets the actual IP/hostname to connect
 #   - Groups can be nested with :children
 #
 # Run with:
-#   ansible -i 02-with-groups.ini all -m ping       # All hosts
+#   ansible -i 02-with-groups.ini all -m ping         # All hosts
 #   ansible -i 02-with-groups.ini webservers -m ping  # Only webservers
-#   ansible -i 02-with-groups.ini japan -m ping     # Only japan region
 #
 # =============================================================================
 
 # Web servers group
 [webservers]
-web1 ansible_host=10.0.1.10
-web2 ansible_host=10.0.1.11
+al2023-1.ans.local
 
 # Database servers group
 [dbservers]
-db1 ansible_host=10.0.1.20
-db2 ansible_host=10.0.1.21
+al2023-2.ans.local
 
-# Regional groups (Tokyo data center)
-[tokyo]
-web1
-db1
-
-# Regional groups (Osaka data center)
-[osaka]
-web2
-db2
-
-# Parent group containing all Japan hosts
-# 親グループ（リージョン別にまとめる）
-[japan:children]
-tokyo
-osaka
+[all:vars]
+ansible_python_interpreter=/usr/bin/python3
