--- a/middleware/ansible/02-inventory/inventory/01-basic-ini.ini
+++ b/middleware/ansible/02-inventory/inventory/01-basic-ini.ini
@@ -9,10 +9,6 @@
 #
 # =============================================================================
 
-# Ungrouped hosts (automatically in "all" and "ungrouped" groups)
-node1
-node2
-
-# You can also use IP addresses
-# 192.168.1.10
-# 192.168.1.11
+# Using DNS names from Route 53 Private Hosted Zone
+al2023-1.ans.local
+al2023-2.ans.local
