--- a/middleware/ansible/02-inventory/inventory/03-yaml-format.yaml
+++ b/middleware/ansible/02-inventory/inventory/03-yaml-format.yaml
@@ -19,34 +19,18 @@
 # =============================================================================
 
 all:
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+
   children:
     # Web servers group
     # Webサーバーグループ
     webservers:
       hosts:
-        web1:
-          ansible_host: 10.0.1.10
-        web2:
-          ansible_host: 10.0.1.11
+        al2023-1.ans.local:
 
     # Database servers group
     # DBサーバーグループ
     dbservers:
       hosts:
-        db1:
-          ansible_host: 10.0.1.20
-        db2:
-          ansible_host: 10.0.1.21
-
-    # Regional groups
-    # リージョン別グループ
-    japan:
-      children:
-        tokyo:
-          hosts:
-            web1:
-            db1:
-        osaka:
-          hosts:
-            web2:
-            db2:
+        al2023-2.ans.local:
