--- a/middleware/ansible/examples/01-inventory/template/hosts.ini
+++ b/middleware/ansible/examples/01-inventory/template/hosts.ini
@@ -5,13 +5,16 @@
 # YOUR TASK: Add your hosts and groups below
 #
 # Hints:
-# - Each line is a host (IP or hostname)
+# - Each line is a host (DNS name or IP)
 # - Groups are defined with [groupname]
-# - Variables can be added after the hostname
+# - Use Route 53 Private Hosted Zone for DNS resolution
 #
 # Example:
 #   [webservers]
-#   web1 ansible_host=192.168.1.10
+#   al2023-1.ans.local
+#
+#   [dbservers]
+#   al2023-2.ans.local
 #
 # =============================================================================
 
