--- a/middleware/ansible/02-inventory/inventory/04-group-vars/host_vars/al2023-1.ans.local.yaml
+++ b/middleware/ansible/02-inventory/inventory/04-group-vars/host_vars/al2023-1.ans.local.yaml
@@ -1,27 +1,4 @@
-# =============================================================================
-# host_vars/al2023-1.ans.local.yaml - Variables specific to al2023-1 host
-# =============================================================================
-#
-# These variables apply ONLY to the host named "al2023-1.ans.local".
-# HIGHEST precedence (overrides all.yaml and group_vars).
-#
-# Use case: This server has special configuration
-# 用途：特別な設定が必要なホスト
-#
-# =============================================================================
-
 ---
-# Override http_port from group_vars/webservers.yaml
-# al2023-1 uses non-standard port (load balancer backend)
-http_port: 8080
-
-# This host is the primary/master
-is_primary: true
-
-# Custom nginx config for this host
-nginx_worker_processes: 4  # Override auto (this server has 4 cores)
-
-# Host-specific tags
-host_tags:
-  role: primary-web
-  team: platform
+# host_vars/al2023-1.ans.local.yaml - Host-specific variables
+http_port: 8080  # Override group_vars value
+server_id: 1
