--- a/middleware/ansible/01-installation/ansible.cfg
+++ b/middleware/ansible/01-installation/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./inventory/hosts.ini
+# No inventory in this lesson - Control Node setup only
+# Inventory will be configured in lesson 02
 remote_user = ansible
 host_key_checking = False
 
