--- a/middleware/ansible/01-installation/cfn/control-node.yaml
+++ b/middleware/ansible/01-installation/cfn/control-node.yaml
@@ -115,6 +115,7 @@ Resources:
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
         - arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess
+        - arn:aws:iam::aws:policy/AmazonRoute53FullAccess
       Policies:
         - PolicyName: AnsibleCoursePolicy
           PolicyDocument:
