docs: add beginner-friendly handler explanation and magic variables section

--- a/middleware/ansible/04-playbook-basics/exercises/03-motd-with-handlers.yaml
+++ b/middleware/ansible/04-playbook-basics/exercises/03-motd-with-handlers.yaml
@@ -11,7 +11,7 @@
       ========================================
        Ansible Managed Server
        Host: {{ inventory_hostname }}
-       Updated: {{ ansible_date_time.iso8601 }}
+       Managed by Ansible
       ========================================
 
   tasks:
