--- a/middleware/ansible/05-variables-logic/inventory/hosts.ini
+++ b/middleware/ansible/05-variables-logic/inventory/hosts.ini
@@ -7,21 +7,21 @@
 
 # Functional groups
 [webservers]
-al2023-1.ans.local
+web-1.ans.local
 
 [dbservers]
-al2023-2.ans.local
+db-1.ans.local
 
 [appservers]
-ubuntu-1.ans.local
+app-1.ans.local
 
 # OS-based groups
 [amazon_linux]
-al2023-1.ans.local
-al2023-2.ans.local
+web-1.ans.local
+db-1.ans.local
 
 [ubuntu]
-ubuntu-1.ans.local
+app-1.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
