--- a/middleware/ansible/09-vault-secrets/inventory/hosts.ini
+++ b/middleware/ansible/09-vault-secrets/inventory/hosts.ini
@@ -5,10 +5,10 @@
 # =============================================================================
 
 [webservers]
-al2023-1.ans.local
+web-1.ans.local
 
 [dbservers]
-al2023-2.ans.local
+db-1.ans.local
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
