--- a/middleware/ansible/01-installation/cfn/control-node.yaml
+++ b/middleware/ansible/01-installation/cfn/control-node.yaml
@@ -124,7 +124,13 @@ Resources:
               - Effect: Allow
                 Action:
                   - cloudformation:*
-                Resource: !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/ansible-lesson-*/*
+                Resource: !Sub arn:aws:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/ansible-*/*
+              - Effect: Allow
+                Action:
+                  - cloudformation:ListStacks
+                  - cloudformation:DescribeStacks
+                  - cloudformation:ValidateTemplate
+                Resource: '*'
               - Effect: Allow
                 Action:
                   - ec2:RunInstances
